# ariel-cdc-badge

./: Cargo.toml  Readme.md  laze-project.yml
src/: main.rs  pins.rs
