[package]
name = "cdc-badge-demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [
  "i2c",
  "spi",
  "external-interrupts",
  "time",
] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }

ssd1680-rs = { git = "https://github.com/nponsard/ssd1680-rs.git", features = [
  "async",
] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

embedded-graphics-core = { version = "0.4.0" }
embedded-graphics = { version = "0.8.1" }

once_cell = { version = "1.21.3", default-features = false, features = [
  "critical-section",
] }

embassy-sync = "0.7.2"


tinybmp = "0.7.0"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
